@@ -47,6 +47,8 @@ namespace System.Web.UI.WebControls {
 		TableCellCollection cells;
 #if NET_2_0
 		bool tableRowSectionSet;
+
+		internal TableRowCollection Container { get; set; }
 #endif
 		
 		public TableRow ()
@@ -129,6 +131,9 @@ namespace System.Web.UI.WebControls {
 					throw new ArgumentOutOfRangeException ("TableSection");
 				ViewState ["TableSection"] = (int) value;
 				tableRowSectionSet = true;
+				TableRowCollection container = Container;
+				if (container != null)
+					container.RowTableSectionSet ();
 			}
 		}
 #endif
